apply plugin: 'groovy'
apply plugin: 'application'

mainClassName = 'ch.waterbead.Main'
mainClass = 'ch.waterbead.Main'

applicationDefaultJvmArgs = ["-Xmx1526m","-Xms256m","-server", "-XX:+UseConcMarkSweepGC"]

sourceCompatibility = '1.8'

repositories {
    mavenCentral()
}

dependencies {
    compile project(':common')
    compile 'org.mybatis:mybatis:3.2.7'
    testCompile group: 'junit', name: 'junit', version: '4.10'
}

sourceSets {
    main {
        groovy {
            srcDirs = ['src/groovy']
        }
    }

    test {
        groovy {
            srcDirs = ['test/groovy']
        }
    }
}